feat: Implement custom AI response management
Adds functionality to manage custom AI responses for the robot. This includes:
- New state management for custom responses in the App.tsx.
- Updates to types.ts to define the CustomResponse interface.
- Addition of relevant icons (ChatBubbleLeftRightIcon, TrashIcon) to components/Icons.tsx.
- Modifications to constants.ts to include a new step detailing how to add custom response functionality.
- Updates to package.json and metadata.json for project naming consistency.
- Adds an RGB text glow animation to the index.html for visual feedback.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saras-ai-robot-control-panel",
+  "name": "saras-ai-robot",
   "private": true,
   "version": "0.0.0",
   "type": "module",
